# ImpactAI

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
docker/: Dockerfile
docker/grafana/dashboards/: api-overview.json
docker/prometheus/: alerts.yml  prometheus.yml
docs/architecture/: 01-system-overview.md  02-database-design.md  03-ai-pipeline.md  04-api-design.md  05-step2-git-and-analysis.md  06-step3-dependency-graph.md  07-step4-embeddings-qdrant.md  08-step5-gnn-training.md  09-step6-risk-reviewer.md  10-step7-llm-explanation.md  11-step8-rest-api.md  12-step9-react-frontend.md  13-step10-xai.md  14-step11-evaluation.md  15-step12-production-hardening.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: client.ts  types.ts
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
frontend/src/components/: AffectedFilesList.tsx  DependencyGraph.tsx  Layout.tsx  NodeAttentionSlider.tsx  RiskGauge.tsx  ShapChart.tsx
frontend/src/hooks/: usePolling.ts  useScrollReveal.ts
frontend/src/pages/: DashboardPage.tsx  EvaluatePage.tsx  GraphPage.tsx  LoginPage.tsx  PredictPage.tsx  PredictionDetailPage.tsx  RegisterPage.tsx
scripts/: run_evaluation.py  train_gnn.py
src/code_impact/: __init__.py
src/code_impact/domain/: __init__.py  exceptions.py
src/code_impact/ml/: __init__.py  model_registry.py
tests/integration/: test_api.py
tests/support/: in_memory_embedding_repositories.py  in_memory_graph_repository.py  in_memory_prediction_repositories.py  in_memory_repositories.py  ml_fixtures.py
tests/unit/analysis/: test_ast_analyzer.py  test_diff_analysis_service.py  test_diff_parser.py
tests/unit/auth/: test_auth_use_cases.py  test_jwt_service.py
tests/unit/domain/: test_entities.py  test_value_objects.py
(+141 files in other folders)
